Notify about new contents with a console beep
Good terminal emulators translate this to the X11 "urgency" hint. Some
configuration may be required to avoid annoying sounds.

--- a/bccc/bccc.conf.sample
+++ b/bccc/bccc.conf.sample
@@ -17,6 +17,11 @@ level = warning
 # Two default themes are available: "dark" and "light".
 theme = dark
 
+# Notify about updates by sending a console beep. Depending on your
+# configuration, this may produce a sound and/or make your terminal emulator set
+# the X11 "urgency" hint on its window.
+console_beep = on
+
 [url]
 # Program used to open URLs. On Linux (and other FreeDesktop-compliant systems),
 # "xdg-open" is usually a good choice. You can also set this to your web browser
